Fix layout issues on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500&display=swap');
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-size: 16px;
   font-family: 'IBM Plex Sans', sans-serif;
@@ -10,4 +17,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #1d1d1d;
   background-color: #fafafa;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
